# HackMIT

./: .env  .env.example  API_CHANGES.md  DATABASE_INTEGRATION_GUIDE.md  README.md  analyticsRouter.ts  app.ts  exa_lesson_generator.py  fix_teacher_data.py  insert_mock_data.py  main.py  mock_data_generator.py  nlp_summary_generator 2.py  package-lock.json  package.json  requirements.txt  server.ts  teacher_overview_teacher_123_20250913 2.md  test_teacher_ids.py  tsconfig.json
HackMIT-analytical_agent_backup/: .env.example  analytical_agent.py  analyticsRouter.ts  analyticsService.ts  build_teacher_overview.py  package-lock.json  server.ts  standalone_analytics.py
agents/: agent_orchestrator.py  aggregation_agent.py  guardrail_agent.py  student_agent.py  takeaway_agent.py  teacher_agent.py
analytical_agent_integration/: README.md  analytical_agent.py  analyticsService.ts  analyze_current_output.py  build_teacher_overview.py  create_test_data.py  (+10 more)
studentagents/: .env  README.md  api.py  conversation_analysis.md  crew.py  database_utils.py  interactive_main.py  prisma_client.py  pyproject.toml
studentagents/config/: agents.yaml  tasks.yaml
studentagents/src/studentagents/: crew.py  interactive_main.py
studentagents/src/studentagents/config/: agents.yaml  tasks.yaml
studentagents/studentagents/: run_api.py
studentagents/studentagents/src/: test_yaml_integration.py
studentagents/studentagents/src/studentagents/: api.py  crew.py  database_utils.py  interactive_main.py  prisma_client.py  view.py
studentagents/studentagents/src/studentagents/config/: tasks.yaml
(+62 files in other folders)
