[project]
name = "studentagents"
version = "0.1.0"
description = "studentAgents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
    "anthropic>=0.25.0",
    "langchain-anthropic>=0.1.0"
]

[project.scripts]
studentagents = "studentagents.main:run"
run_crew = "studentagents.main:run"
train = "studentagents.main:train"
replay = "studentagents.main:replay"
test = "studentagents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
