[project]
name = "studentagents"
version = "0.1.0"
description = "studentAgents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
    "anthropic>=0.25.0",
    "langchain-anthropic>=0.1.0",
    "prisma>=0.11.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0"
]

[project.scripts]
studentagents = "studentagents.main:run"
run_crew = "studentagents.main:run"
train = "studentagents.main:train"
replay = "studentagents.main:replay"
test = "studentagents.main:test"
api = "studentagents.api:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/studentagents"]

[tool.crewai]
type = "crew"
